--- a/package.yaml
+++ b/package.yaml
@@ -22,6 +22,7 @@ description:         Please see the README on GitHub at <https://github.com/Greg
 dependencies:
 - base >= 4.7 && < 5
 - gloss
+- bmp
 
 library:
   source-dirs: src
